# Json-Analyzer

./: .gitignore  .gitmodules  README.md
cpp/: CMakeLists.txt  README.md
cpp/include/: RapidJsonArray.h  RapidJsonImpl.h  at_return.h  code_blocks.h  compare_value.h  errors.h  expression_attribute.h  expression_evaluation_interface.h  expression_value.h  generic_comparator.h  generic_condition.h  generic_expression.h  json_array_rep.h  json_array_value_bridge.h  json_parser_factory.h  json_parser_interface.h  json_rule_engine.h  json_rule_exception.h  statement.h
cpp/src/: Makefile  RapidJsonImpl.cpp  code_blocks.cpp  compare_value.cpp  expression_attribute.cpp  generic_condition.cpp  generic_expression.cpp  json_analyzer.l  json_analyzer.ypp  json_array_value_bridge.cpp  json_parser_factory.cpp  json_rule_engine.cpp  statement.cpp
cpp/test/: CMakeLists.txt
cpp/test/unittest/: Makefile  compare_value_test.cpp  expression_attribute_test.cpp  generic_condition_test.cpp  generic_expression_test.cpp  json_rule_engine_test.cpp  statement_test.cpp
golang/: Makefile  README.md  generic_block.go  generic_block_interface.go  generic_block_test.go  generic_comparator.go  generic_comparator_test.go  generic_expression.go  generic_expression_test.go  generic_value.go  generic_value_test.go  identifier.go  identifier_test.go  json_analyzer.rl  json_analyzer.y  json_rule_engine.go  json_rule_engine_test.go  logger.go
golang/janalyzer/: Makefile  generic_block.go  generic_block_interface.go  generic_block_test.go  generic_comparator.go  generic_comparator_test.go  generic_expression.go  generic_expression_test.go  generic_value.go  generic_value_test.go  identifier.go  identifier_test.go  json_analyzer.rl  json_analyzer.y  json_rule_engine.go  json_rule_engine_test.go  logger.go
sample-filter-rules/: backery_filter.rule  filter_test_1.rule  filter_test_2.rule  filter_test_3.rule  filter_test_4.rule  filter_test_greaterThan.rule  filter_test_lessThan.rule  medication_filter.rule  multiple_filters.rule  wrong_filter.rule
sample-json-files/: backery.json  diam_test_1.json  diam_test_2.json  medication.json  multiple_json_objects.json
